# study

./: build.bat
projects/: CMakeLists.txt
projects/long_numbers/: CMakeLists.txt
projects/long_numbers/src/: CMakeLists.txt  long_number — копия.cpp  long_number.cpp  long_number.hpp  main.cpp
projects/long_numbers/test/: CMakeLists.txt
projects/my_sobaka/: CMakeLists.txt  main.cpp  run_my_sobaka.bat
projects/unit_test_example/: CMakeLists.txt
projects/unit_test_example/src/: CMakeLists.txt
projects/unit_test_example/test/: CMakeLists.txt  test_bubble.cpp
